Made the Numbers Discipline work for digits and pallars

--- a/Numbers.html
+++ b/Numbers.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="card">
-    <p class="card-footer">Gantry</p>
-    <p class="Number">1425</p>
+    <p class="card-footer" id="pallairs">Memory Pillars</p>
+    <p class="Number" id="Digit">Digits</p>
     <p class="card-footer">Numbers</p>
   </div>
 
-  <button class="arrow">
+  <button class="arrow" id="Next">
   <span></span>
   <span></span>
   <span></span>
