added some testing pages to test database

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <div class="container">
     <img src="images/img-6.png" alt="" class="img">
     <p>Please enter your first name</p>
-    <input type="text" id="input-field" placeholder="Name" class="input-field">
-    <button id="add-button" class="add-button" >Continue</button>
+    <input type="text" id="input-field" placeholder="Admin Number" class="input-field">
+    <input type="text" id="Password-field" placeholder="Password" class="input-field">
+    <button id="add-button" class="add-button">Log in</button>
   </div>
-  <p id="alert-message"></p>
+  <p id="alert-message" style="color: red;"></p>
   <script src="JS/index.js" type="module"></script>
 </body>
 </html>
