made some changes to the sign up index
uhhh yes

--- a/signup.html
+++ b/signup.html
@@ -32,12 +32,11 @@
             <div class="form-outline mb-4">
               <input type="password" id="sign-up-passwd" class="form-control form-control-lg input-field" placeholder="Password"/>
             </div>
-
+            <p>Already have an account? <a href="/index.html">Go back to log in</a></p>
             <!-- Sign up and Login button -->
             <button id="sign-up-page-btn" class="btn btn-primary btn-lg btn-block"   style="background-color: #55acee;">Sign Up</button>
-
-            </div>
             <p id="alert-message" style="color: red;" class="pt-3 text-center"></p>
+            </div>
         </div>
       </div>
     </div>
