made the sign up sheet workable with the db

--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
       </div>
     </div>
   </section>
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="JS/sign_up.js" type="module"></script>
 </body>
 </html>
