--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             class="img-fluid" alt="Phone image">
         </div>
         <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-          <p>Please enter your Credentials:</p>
+          <p>Please enter your Credentials</p>
             <!-- Admin input -->
             <div class="form-outline mb-4">
               <input type="text" id="admin_no" class="form-control form-control-lg input-field" placeholder="Admin Number"/>
