End button returns to Main page

--- a/Numbers.html
+++ b/Numbers.html
@@ -20,7 +20,7 @@
   <span></span>
   </button>
 
-  <button id="end-button" class="add-button">End</button>
+  <button id="end-btn" class="add-button">End</button>
 
 </body>
 <script src="JS/Number.js" type="module"></script>
