--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     </div>
   </section>
 		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-		<script src="JS/login.js"></script>
+		<script src="JS/login.js" type="module"></script>
 	</body>
 </html>
