--- a/Main.html
+++ b/Main.html
@@ -8,7 +8,8 @@
   <script>
     const Admin_Number = localStorage.getItem("Admin Number");
     console.log(Admin_Number);
-    if (Admin_Number == null ||  Admin_Number == undefined) window.location.href = "index.html";
+    if (Admin_Number == null ||  Admin_Number == undefined) {
+      window.location.href = "index.html";}
   </script>
 </head>
 <body>
