--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,6 @@
   <title>Disciplines</title>
   <script>
     const Admin_Number = localStorage.getItem("Admin Number");
-    console.log(Admin_Number);
     if (Admin_Number == null ||  Admin_Number == undefined) {
       window.location.href = "index.html";}
   </script>
@@ -23,6 +22,17 @@
     <a id="add-button" class="add-button" href="">7. Binary</a>
   </div>
   <img src="images/img-6.png" alt="" class="img">
-</body>
+  <div class="container">
+    <a id="sign-out" class="add-button" href="">Sign Out</a>
+  </div>
 
+</body>
+  <script>
+    const leave = document.getElementById("sign-out");
+    leave.addEventListener("click", function() {
+      localStorage.removeItem("Admin Number");
+      window.location.href = "index.html";
+  });
+
+  </script>
 </html>
