updated modal with green bg

--- a/Numbers.html
+++ b/Numbers.html
@@ -32,7 +32,7 @@
 
 
   <!-- The Modal -->
-  <div class="modal" id="myModal" aria-hidden="true" data-mdb-backdrop="false">
+  <div class="modal modal_flash" id="myModal" aria-hidden="true" data-mdb-backdrop="false">
     <div class="modal-dialog-centered modal-dialog">
       <div class="modal-content">
         <!-- Modal content goes here -->
