made changes to the numbers part and added colors to the checking

--- a/Numbers.html
+++ b/Numbers.html
@@ -32,7 +32,7 @@
 
 
   <!-- The Modal -->
-  <div class="modal modal_flash" id="myModal" aria-hidden="true" data-mdb-backdrop="false">
+  <div class="modal" id="myModal" aria-hidden="true" data-mdb-backdrop="false">
     <div class="modal-dialog-centered modal-dialog">
       <div class="modal-content">
         <!-- Modal content goes here -->
@@ -49,7 +49,6 @@
                 pattern="[0-9]+"
                 autofocus
               />
-
               <div
                 class="grid grid-cols-3 grid-rows-4 text-2xl py-3 px-2 justify-items-center gap-2 items-center"
                 id="callGrid"
