scoring system is inside

--- a/Numbers.html
+++ b/Numbers.html
@@ -41,6 +41,7 @@
           <button type="button" class="btn-close confetti-btn" data-bs-dismiss="modal" aria-label="Close" id=""></button>
         </div>
           <div class="container">
+            <p class="Number" id="score">Score</p>
             <div class="grow flex flex-col justify-center">
               <input
                 type="text"
