did some changes to the grid

--- a/Numbers.html
+++ b/Numbers.html
@@ -56,88 +56,99 @@
               >
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-6 text-center d-block justify-items-center">
+                  <div class="col-10 text-center d-block justify-items-center">
                       <button
                           data-value="1"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-tl-lg relative"
+                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-tl-lg relative column"
                         >
                           <p class="font-bold">1</p>
                         </button>
                         <button
                           data-value="2"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
+                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
                         >
                           <p class="font-bold">2</p>
                         </button>
                         <button
                           data-value="3"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
+                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
                         >
                           <p class="font-bold">3</p>
                         </button>
                     </div>
+                <div class="row">
+                  <div class="col-10 text-center d-block justify-items-center">
+                      <button
+                        data-value="4"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
+                      >
+                        <p class="font-bold">4</p>
+                      </button>
+                      <button
+                        data-value="5"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
+                      >
+                        <p class="font-bold">5</p>
+                      </button>
+                      <button
+                        data-value="6"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
+                      >
+                        <p class="font-bold">6</p> 
+                      </button>
+                  </div>
               </div>
 
-                <button
-                  data-value="4"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">4</p>
-                </button>
-                <button
-                  data-value="5"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">5</p>
-                </button>
-                <button
-                  data-value="6"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">6</p>
-                </button>
-                <button
-                  data-value="7"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">7</p>
-                </button>
-                <button
-                  data-value="8"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">8</p>
-                </button>
-                <button
-                  data-value="9"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">9</p>
-                </button>
-
-                <button id="backspace"
-                data-value="backspace"
-                class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-              >
-                <p class="font-bold">backspace</p>
-              </button>
+              <div class="row">
+                  <div class="col-10 text-center d-block justify-items-center">
+                      <button
+                        data-value="7"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
+                      >
+                        <p class="font-bold">7</p>
+                      </button>
+                      <button
+                        data-value="8"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
+                      >
+                        <p class="font-bold">8</p>
+                      </button>
+                      <button
+                        data-value="9"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
+                      >
+                        <p class="font-bold">9</p>
+                      </button>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-10 text-center d-block justify-space">
+                        <button id="backspace"
+                        data-value="backspace"
+                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
+                      >
+                        <p class="font-bold">backspace</p>
+                      </button>
 
 
-                <button
-                  data-value="0"
-                  class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                >
-                  <p class="font-bold">0</p>
-                </button>
+                        <button
+                          data-value="0"
+                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
+                        >
+                          <p class="font-bold">0</p>
+                        </button>
 
 
 
-              <button id="Submit"
-              class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-            >
-              <p class="font-bold">Submit</p>
-            </button>
+                      <button id="Submit"
+                      class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
+                    >
+                      <p class="font-bold">Submit</p>
+                    </button>
+              </div>
+              </div>
           </div>
+        </div>
 
               </div>
             </div>
