--- a/Numbers.html
+++ b/Numbers.html
@@ -10,7 +10,7 @@
   <title>Numbers</title>
   <script>
     const Admin_Number = localStorage.getItem("Admin Number");
-    if (Admin_Number == null ||  Admin_Number == undefined) {
+    if (Admin_Number == null ||  Admin_Number == undefined || Admin_Number.length != 7) {
       window.location.href = "index.html";}
   </script>
 </head>
@@ -54,97 +54,111 @@
                 class="grid grid-cols-3 grid-rows-4 text-2xl py-3 px-2 justify-items-center gap-2 items-center"
                 id="callGrid"
               >
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-10 text-center d-block justify-items-center">
-                      <button
-                          data-value="1"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-tl-lg relative column"
-                        >
-                          <p class="font-bold">1</p>
-                        </button>
-                        <button
-                          data-value="2"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                        >
-                          <p class="font-bold">2</p>
-                        </button>
-                        <button
-                          data-value="3"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                        >
-                          <p class="font-bold">3</p>
-                        </button>
-                    </div>
-                <div class="row">
-                  <div class="col-10 text-center d-block justify-items-center">
-                      <button
-                        data-value="4"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                      >
-                        <p class="font-bold">4</p>
-                      </button>
-                      <button
-                        data-value="5"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                      >
-                        <p class="font-bold">5</p>
-                      </button>
-                      <button
-                        data-value="6"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                      >
-                        <p class="font-bold">6</p> 
-                      </button>
-                  </div>
-              </div>
+              <div class="container">
 
-              <div class="row">
-                  <div class="col-10 text-center d-block justify-items-center">
-                      <button
-                        data-value="7"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                      >
-                        <p class="font-bold">7</p>
+                <div class="row pb-3">
+                      <div class="col d-flex justify-content-evenly">
+                            <button
+                                data-value="1"
+                                class="btn btn-primary btn-lg"
+                              >
+                                <p class="font-bold fs-4">1</p>
+                              </button>
+                      </div>
+
+                      <div class="col d-flex justify-content-evenly">
+                          <button
+                            data-value="2"
+                            class="btn btn-primary btn-lg"
+                          >
+                            <p class="font-bold fs-4">2</p>
+                          </button>
+                      </div>
+
+                      <div class="col d-flex justify-content-evenly">
+                          <button
+                            data-value="3"
+                            class="btn btn-primary btn-lg"
+                          >
+                            <p class="font-bold fs-4">3</p>
+                          </button>
+                      </div>
+                  </div>
+
+                <div class="row pb-3">
+                        <div class="col d-flex justify-content-evenly">
+                            <button
+                              data-value="4"
+                              class="btn btn-primary btn-lg"
+                            >
+                              <p class="font-bold fs-4">4</p>
+                            </button>
+                        </div>
+
+                        <div class="col d-flex justify-content-evenly">
+                            <button
+                              data-value="5"
+                              class="btn btn-primary btn-lg"
+                            >
+                              <p class="font-bold fs-4">5</p>
+                            </button>
+                        </div>
+
+                        <div class="col d-flex justify-content-evenly">
+                            <button
+                              data-value="6"
+                              class="btn btn-primary btn-lg"
+                            >
+                              <p class="font-bold fs-4">6</p> 
+                            </button>
+                        </div>
+                </div>
+
+                <div class="row pb-3">
+                    <div class="col d-flex justify-content-evenly">
+                      <button data-value="7" class="btn btn-primary btn-lg">
+                        <p class="font-bold fs-4">7</p>
                       </button>
-                      <button
-                        data-value="8"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                      >
-                        <p class="font-bold">8</p>
+                    </div>
+                    <div class="col d-flex justify-content-evenly">
+                      <button data-value="8" class="btn btn-primary btn-lg">
+                        <p class="font-bold fs-4">8</p>
                       </button>
-                      <button
-                        data-value="9"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative column"
-                      >
-                        <p class="font-bold">9</p>
+                    </div>
+                    <div class="col d-flex justify-content-evenly">
+                      <button data-value="9" class="btn btn-primary btn-lg">
+                        <p class="font-bold fs-4">9</p>
                       </button>
+                    </div>
+                </div>
+
+                <div class="row pb-3">
+                  <div class="col d-flex justify-content-evenly">
+                    <button
+                      data-value="0"
+                      class="btn btn-primary btn-lg"
+                    >
+                      <p class="font-bold fs-4">0</p>
+                    </button>
                   </div>
                 </div>
+
                 <div class="row">
-                  <div class="col-10 text-center d-block justify-space">
-                        <button id="backspace"
-                        data-value="backspace"
-                        class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                      >
-                        <p class="font-bold">backspace</p>
-                      </button>
+                        <div class="col d-flex justify-content-evenly">
+                              <button id="backspace"
+                              data-value="backspace"
+                              class="btn btn-primary btn-lg"
+                            >
+                              <p class="font-bold">backspace</p>
+                            </button>
+                        </div>
 
-
-                        <button
-                          data-value="0"
-                          class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                        >
-                          <p class="font-bold">0</p>
+                      <div class="col d-flex justify-content-evenly">
+                          <button id="Submit"
+                          class="btn btn-primary btn-lg">
+                          <p class="font-bold">Submit</p>
                         </button>
-
-
-
-                      <button id="Submit"
-                      class="w-16 h-16 p-2 bg-slate-500/50 hover:bg-slate-500 flex justify-center rounded-full relative"
-                    >
-                      <p class="font-bold">Submit</p>
-                    </button>
+                      </div>
               </div>
               </div>
           </div>
