making input box readonly

--- a/Numbers.html
+++ b/Numbers.html
@@ -45,6 +45,7 @@
               <div class="container pt-4">
                   <div class="d-flex justify-content-center">
                       <input
+                      readonly
                       type="text"
                       class="bg-transparent outline-none border-0 text-center text-4xl md:text-5xl lg:text-5xl py-5 font-bold tracking-widest text-black fs-4"
                       id="phoneNum"
