--- a/sqare_root.html
+++ b/sqare_root.html
@@ -4,19 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./JS/sqr_root.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/big.js/5.2.2/big.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <style>
+    body{
+      background-color: black!important;
+    }
+  </style>
 </head>
 <body>
+  <div class="container d-flex justify-content-center pt-5">
+      <input type="number" id="n" placeholder="Input Your Square Root">
+      <button id="sqr">Press Here</button>
+    </form>
+  </div>
   <div class="container d-flex justify-content-center">
-    <button id="sqr"> Press Here</button>
     <div class="d-flex align-items-center">
-      <p class="flex-grow-1 ms-3" id="sqr_root">
-        here
-      </p>
+      <div class="container text-wrap">
+        <p id="number" class="text-break fs-5 text-light">Generate the number</p>
+      </div>
     </div>
   </div>  
+
+  <script>
+      const button = document.getElementById("sqr");
+      const n = document.getElementById("n");
+
+      button.addEventListener("click", () => {
+        Big.DP = 2000;
+        var sqrt_2 = " "; // Get the value of the input field
+        sqrt_2 += new Big(n.value).sqrt().toString();
+        AppendInput(sqrt_2);
+      });
+
+      function AppendInput(inputvalue) {
+        const number = document.getElementById("number");
+        number.innerHTML = "";
+
+        // Split the input string into groups of 4 characters with 4 spaces in between
+        const formattedString = inputvalue.match(/.{1,4}/g).join(" &nbsp;&nbsp; ");
+        number.innerHTML += `<p>${formattedString}</p>`;
+      }
+  </script>
 </body>
-<script src="./JS/sqr_root.js"></script>
 </html>
