--- a/Main.html
+++ b/Main.html
@@ -20,7 +20,7 @@
     <a id="add-button" class="add-button" href="">5. Cards</a>
     <a id="add-button" class="add-button" href="">6. Images</a>
     <a id="add-button" class="add-button" href="">7. Binary</a>
-    <a id="add-button" class="add-button" href="sqare_root.html">8. Square Root of n</a>
+    <a id="add-button" class="add-button" href="square_root.html">8. Square Root of n</a>
   </div>
   <img src="images/img-6.png" alt="" class="img">
   <div class="container">
